# usaco-training

./: CMakeLists.txt  LICENSE  README.md
chapter1/section1_2/: broken_necklace.cpp  friday_the_thirteenth.cpp  greedy_gift_givers.cpp  test.cpp  your_ride_is_here.cpp
chapter1/section1_3/: dual_palindromes.cpp  milking_cows.cpp  name_that_number.cpp  palindromic_squares.cpp  transformations.cpp
chapter1/section1_4/: barn_repair.cpp  combination_lock.cpp  mixing_milk.cpp  prime_cryptarithm.cpp  ski_course_design.cpp  wormholes.cpp
chapter1/section1_5/: arithmetic_progressions.cpp  mother_s_milk.cpp
chapter1/section1_6/: number_triangles.cpp  prime_palindromes.cpp  superprime_rib.cpp
chapter2/section2_1/: the_castle.cpp
