cmake_minimum_required(VERSION 3.22)
project(usaco_training)

set(CMAKE_CXX_STANDARD 14)

add_executable(usaco_training chapter1/section1_2/test.cpp)
add_executable(your_ride_is_here chapter1/section1_2/your_ride_is_here.cpp)
add_executable(greedy_gift_givers chapter1/section1_2/greedy_gift_givers.cpp)
add_executable(friday_the_thirteenth chapter1/section1_2/friday_the_thirteenth.cpp)
add_executable(broken_necklace chapter1/section1_2/broken_necklace.cpp)
add_executable(milking_cows chapter1/section1_3/milking_cows.cpp)