cmake_minimum_required(VERSION 3.22)
project(usaco_training)

set(CMAKE_CXX_STANDARD 14)

add_executable(usaco_training chapter1/section1_2/test.cpp)
add_executable(your_ride_is_here chapter1/section1_2/your_ride_is_here.cpp)
add_executable(greedy_gift_givers chapter1/section1_2/greedy_gift_givers.cpp)
add_executable(friday_the_thirteenth chapter1/section1_2/friday_the_thirteenth.cpp)
add_executable(broken_necklace chapter1/section1_2/broken_necklace.cpp)
add_executable(milking_cows chapter1/section1_3/milking_cows.cpp)
add_executable(transformations chapter1/section1_3/transformations.cpp)
add_executable(name_that_number chapter1/section1_3/name_that_number.cpp)
add_executable(palindromic_squares chapter1/section1_3/palindromic_squares.cpp)
add_executable(dual_palindromes chapter1/section1_3/dual_palindromes.cpp)
add_executable(mixing_milk chapter1/section1_4/mixing_milk.cpp)
add_executable(barn_repair chapter1/section1_4/barn_repair.cpp)
add_executable(prime_cryptarithm chapter1/section1_4/prime_cryptarithm.cpp)
add_executable(combination_lock chapter1/section1_4/combination_lock.cpp)
add_executable(wormholes chapter1/section1_4/wormholes.cpp)
add_executable(ski_course_design chapter1/section1_4/ski_course_design.cpp)
add_executable(arithmetic_progressions chapter1/section1_5/arithmetic_progressions.cpp)
add_executable(mother_s_milk chapter1/section1_5/mother_s_milk.cpp)